--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-test
+---
+title: Browse. Shop. Earn. Repeat
+layout: compress
+---
+
+<!DOCTYPE html>
+<html>
+ 
+ {% include head.html %}
+ 
+ <body>
+
+{% include addcontacts.html %}
+   
+</body>
+ 
+</html>
