--- a/join/index.html
+++ b/join/index.html
@@ -9,7 +9,7 @@ layout: compress
  {% include head.html %}
  
  <body>
-
+{% include navigation.html %}
 {% include addcontacts.html %}
    
 </body>
