--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: compress
  <body>
 {% include navigation.html %}
 {% include homepage.html %}
-   
+ {% include footer.html %}  
 </body>
  
 </html>
