--- a/_pages/code.html
+++ b/_pages/code.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: Enter Your Invitation Code 
+title: Look For The Clo 
 description: 
-permalink: /code/
+permalink: /jm/agents/
 show-in-menu: no
 active: active
 ---
