--- a/_pages/code.html
+++ b/_pages/code.html
@@ -2,7 +2,7 @@
 layout: page
 title: Look For The Clo 
 description: 
-permalink: /jm/agents/
+permalink: /agents/
 show-in-menu: no
 active: active
 ---
