--- a/_pages/code.html
+++ b/_pages/code.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Look For The Clo 
+title: Find The Closest Agent Near You
 description: 
 permalink: /agents/
 show-in-menu: no
