--- a/_pages/code.html
+++ b/_pages/code.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: Find The Closest Agent Near You
+title: Find The Closest Pick Up Points Near You
 description: 
-permalink: /agents/
+permalink: /pickup/
 show-in-menu: no
 active: active
 ---
