--- a/_pages/code.html
+++ b/_pages/code.html
@@ -2,7 +2,7 @@
 layout: page
 title: Find The Closest Pick Up Points Near You
 description: 
-permalink: /pickup/
+permalink: 
 show-in-menu: no
 active: active
 ---
