--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@ layout: compress
  <body>
 {% include navigation.html %}
 {% include homepage.html %}
+  {% include benefits.html.html %}
+  
  {% include footer.html %}  
 </body>
  
