--- a/_pages/refjoin.html
+++ b/_pages/refjoin.html
@@ -4,6 +4,8 @@ title: Join
 permalink: /join-r/
 show-in-menu: no
 active: active
+redirect_to: https://www.allpree.com
+visible: 0
 ---
 {% include head.html %}
 {% include navigation.html %}
