--- a/_pages/thankyou.html
+++ b/_pages/thankyou.html
@@ -4,6 +4,8 @@ title: Thank You
 permalink: /thankyou/
 show-in-menu: yes
 active: active
+redirect_to: https://www.allpree.com
+visible: 0
 ---
 
 {% include thankyou.html %}
