--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ layout: compress
  
  <body>
 {% include navigation.html %}
-{% include homepage.html %}
+  {% include deals.html %}
+
   
  {% include footer.html %}  
 </body>
